@@ -2,5 +2,6 @@ include README.rst
 include tkbackup.desktop
 include tkbak
 include cr_shortcut.py
-recursive-include backup/locale/el_GR/LC_MESSAGES *
+recursive-include backup/locale/*/LC_MESSAGES *
 recursive-include backup/docs *
+exclude backup/docs *.xcf
